# understand-vsr

./: Cargo.toml  README.md  VSR.tla
src/: main.rs
